[gd_scene load_steps=6 format=3 uid="uid://dgpndyk54j8y3"]

[ext_resource type="Script" path="res://scripts/projectile.gd" id="1_3ew4o"]
[ext_resource type="AudioStream" uid="uid://5jf767urx3x" path="res://assets/sounds/explosion.wav" id="3_1lycy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_62p77"]
size = Vector2(13, 3)

[sub_resource type="Gradient" id="Gradient_avrfc"]
offsets = PackedFloat32Array(0, 0.318182, 0.694805, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.627451, 1, 1, 1, 0.131466, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_a5na7"]
gradient = SubResource("Gradient_avrfc")
width = 32
height = 32
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Projectile" type="Node2D"]
script = ExtResource("1_3ew4o")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.362
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 26

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8.5, 0)
shape = SubResource("RectangleShape2D_62p77")

[node name="Light" type="PointLight2D" parent="."]
shadow_enabled = true
shadow_filter_smooth = 23.0
texture = SubResource("GradientTexture2D_a5na7")
texture_scale = 4.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1lycy")
max_polyphony = 4

[node name="Animation" type="AnimatedSprite2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="Animation" to="." method="_on_animation_animation_finished"]
